# VulkanProceduralGrass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_vs.bat
assets/performance_timings/: CulledVulkanFrameTimings_1048576.txt  CulledVulkanFrameTimings_2097152.txt  CulledVulkanFrameTimings_262144.txt  CulledVulkanFrameTimings_4194304.txt  CulledVulkanFrameTimings_524288.txt  CulledVulkanFrameTimings_8388608.txt  NoCullVulkanFrameTimings_1048576.txt  NoCullVulkanFrameTimings_2097152.txt  NoCullVulkanFrameTimings_262144.txt  NoCullVulkanFrameTimings_4194304.txt  NoCullVulkanFrameTimings_524288.txt  NoCullVulkanFrameTimings_8388608.txt  VulkanFpsCount_430512.txt  VulkanFpsCount_8388608.txt  VulkanFrameTimings_1072145.txt  VulkanFrameTimings_1535599.txt  VulkanFrameTimings_2097152.txt  VulkanFrameTimings_413812.txt  VulkanFrameTimings_4194304.txt  VulkanFrameTimings_430512.txt  VulkanFrameTimings_524288.txt  VulkanFrameTimings_8388608.txt
include/: Buffer.h  Camera.h  Constants.h  GrassBlade.h  Mesh.h  MiscStructs.h  Sphere.h  Swapchain.h  Timer.h  Utility.h  Vertex.h  VulkanApplication.h
scripts/: find_cmake.bat  generate_vs.bat
shaders/: !compile_shaders.bat  basicCompute.comp  basicShader.frag  basicShader.frag.spv  basicShader.tesc  basicShader.tesc.spv  basicShader.tese  basicShader.tese.spv  basicShader.vert  basicShader.vert.spv  compile_shaders.bat  grass.vert  grass.vert.spv  grassCompute.comp  grassCompute.comp.spv  grassTessControl.tesc  grassTessControl.tesc.spv  grassTessEval.tese  grassTessEval.tese.spv  mesh.vert  mesh.vert.spv  terrainTessControl.tesc  terrainTessControl.tesc.spv  terrainTessEval.tese  terrainTessEval.tese.spv
src/: Camera.cpp  GrassBlade.cpp  Mesh.cpp  Sphere.cpp  VulkanApplication.cpp  main.cpp
